--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,5 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> 📝 language: Korean, English & Japanese</p>
+<p> ⚙ Hardware Technology: MATLAB, Pspice & Verilog</p>
+<p> 💻 Software Technology: Python, R, C++, HTML, CSS, Javascript, Linux & node.js</p>
+<p> 🎨 Designing: Adobe Photoshop, Adobe Illustrator, Adobe XD, Adobe Premiere & Adobe After Effects</p>
+<p> 🧩 Others: Git, Microsoft Word, Microsoft PowerPoint, Microsoft Excel & Microsoft Access</p>
