--- a/_includes/twitter_follow_button.html
+++ b/_includes/twitter_follow_button.html
@@ -1,1 +1,10 @@
-<a href="https://twitter.com/{{site.twitter_username}}?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="true">Follow @{{site.twitter_username}}</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<a href="https://instagram.com/yrhs.dev">
+   <span style="font-size: 1.5rem;">
+       <span style="color: indianred;">
+          <i class="fab fa-instagram"></i>
+       </span>
+   </span>
+</a>
+
+#<a href="https://twitter.com/{{site.twitter_username}}?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="true">Follow @{{site.twitter_username}}</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
