--- a/_includes/twitter_follow_button.html
+++ b/_includes/twitter_follow_button.html
@@ -1,8 +1,11 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
 <a href="https://instagram.com/yrhs.dev">
-   <span style="font-size: 1.5rem;">
-       <span style="color: indianred;">
+   <span style="font-size: 1.5rem; font-style:normal">
+       <span style="font-weight:bold">
+       <span style="color: deeppink;">
           <i class="fab fa-instagram"></i>
+       </span>
        </span>
    </span>
 </a>
