--- a/_includes/head.html
+++ b/_includes/head.html
@@ -139,7 +139,16 @@
     crossorigin="anonymous"
   ></script>
 
+  <!-- Facebook & Instagram Follow Button -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f6272ee5e275cb7"></script>
 
+  
+  
+  
+  
+  
+  
+  
  <!-- (you can remove the below scripts but do buy me a coffee to show some support :) -->
 <!-- 
   <script>
