--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -1,7 +1,7 @@
 <!-- Mailchimp Newletters -->n
 <form action="{{site.mailchimp_form_url}}"method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" ovalidate>
 <div id="mc_embed_signup_scroll_footer">
-    <label for="mce-EMAIL_footer"> If you want to hear big data and artificial intelligence news, Write your e-mail!</label>
+    <label for="mce-EMAIL_footer"> If you want to hear big data and A.I. news,<br> Write your e-mail!😀</label>
     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL_footer" placeholder="Email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true">
