--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -2,4 +2,4 @@
 <p> ⚙ Hardware Technology: MATLAB, Pspice & Verilog</p>
 <p> 💻 Software Technology: Python, R, C++, HTML, CSS, Javascript, Linux & node.js</p>
 <p> 🎨 Designing: Adobe Photoshop, Adobe Illustrator, Adobe XD, Adobe Premiere & Adobe After Effects</p>
-<p> 🧩 Others: Git, Microsoft Word, Microsoft PowerPoint, Microsoft Excel & Microsoft Access</p>
+<p> 🧩 Others: Git, Data Processing, Project Management,  Microsoft Word, Microsoft PowerPoint, Microsoft Excel & Microsoft Access</p>
