--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -5,9 +5,9 @@
     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL_footer" placeholder="Email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true">
-        <input type="text" name="b_50bab1c85eae24ecfb0f68361_3a2dd721d0" tabindex="-1" value="">
+        <input type="email" name="email" tabindex="-1" value="">
     </div><br />
     <div class="clear">
-        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-lg btn-success">
+        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-primary btn-success">
     </div>
 </div>
