--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -1,12 +1,12 @@
-<!-- Mailchimp Newletters -->n
+<!-- Mailchimp Newletters -->
 <form action="{{site.mailchimp_form_url}}"method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" ovalidate>
 <div id="mc_embed_signup_scroll_footer">
-    <label for="mce-EMAIL_footer"> If you want to hear big data and A.I. news,<br> Write your e-mail!😀</label>
+    <label for="mce-EMAIL_footer"> If you want to hear Big Data and A.I. news,<br> Write your e-mail!😀</label>
     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL_footer" placeholder="Email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true">
         <input type="email" name="email" tabindex="-1" value="">
-    </div><br />
+    </div><br/>
     <div class="clear">
         <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-primary btn-success">
     </div>
