--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -8,6 +8,6 @@
         <input type="email" name="email" tabindex="-1" value="">
     </div><br/>
     <div class="clear">
-        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-primary btn-primary active">
+        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-primary btn-info">
     </div>
 </div>
