--- a/_includes/contact_me_form.html
+++ b/_includes/contact_me_form.html
@@ -1,5 +1,5 @@
 <!-- Replace the email with your own formspree email -->
-<form action="https://formspree.io/{{ site.formspree_email }}" method="POST" >
+<form action="https://formspree.io/xzbkpyjo" method="POST" >
     <div class="form-group">
       <label for="contact_form_name">Your Name :</label>
       <input type="text" class="form-control" name="name" id="contact_form_name" placeholder="Enter Your Name">
@@ -12,5 +12,5 @@
        <label for="contact_form_message"> Your Message :</label>
       <textarea name="_message" class="form-control" id="contact_form_message" placeholder="Enter Your Message"></textarea>
      </div>
-      <button type="submit" value="Send" class="btn btn-lg btn-dark">Submit</button>
+      <button type="submit" value="Send" class="btn btn-lg btn-info">Submit</button>
  </form>
