--- a/_includes/head.html
+++ b/_includes/head.html
@@ -139,6 +139,10 @@
     crossorigin="anonymous"
   ></script>
   
+  <!-- Facebook, Tweeter & Instagram Button -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f6272ee5e275cb7"></script>
+
+  
   
   
   
