--- a/_includes/head.html
+++ b/_includes/head.html
@@ -140,7 +140,9 @@
   ></script>
   
   <!-- Facebook, Tweeter & Instagram Button -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f6272ee5e275cb7"></script>
+<script 
+    type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f6272ee5e275cb7"
+  ></script>
 
 
   
