--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
     });
   });
 </script>
-    <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/imac.jpg); background-size: cover;">
+    <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/macbook.jpg); background-size: cover;">
       <img class="author-profile-img" src="/assets/img/profile.png" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
