--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -257,7 +257,28 @@ layout: default
       {% endif %} {% endfor %}
     </div>
     
-    
+    {% endif %} {% if site.show_author_researchs == true %}
+    <div class="card">
+      <h1 class="card-title">📖 Research</h1>
+      <br />
+      {% for clubs in site.author_researchs %} {% if researchs.visibility == true
+      %}
+      <div class="row">
+        <div class="col-md-2">
+          <img
+            src="{{site.url}}{{site.baseurl}}/assets/img/{{ researchs.company_logo }}"
+            class="company-logo"
+          />
+        </div>
+        <div class="col-md-6">
+          <h4 class="experience-title">{{ researchs.designation }}</h4>
+          <h6 class="experience-info">{{ researchs.company_name}}</h6>
+          <p class="experience-desc">{{ researchs.description }}</p>
+          <p><a href="{{researchs.company_url}}">{{ researchs.company_url}}</a></p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
+    </div>    
     
     {% endif %} {% if site.show_author_work_experiences == true %}
     <div class="card">
