--- a/_layouts/hardware.html
+++ b/_layouts/hardware.html
@@ -35,7 +35,7 @@ layout: default
                 <li class="pagination-link disabled"><span aria-hidden="true">&laquo;</span></li>
               {% endif %}
 
-              <li class="pagination-link" ><a href="/hardware">First</a></li>
+              <li class="pagination-link" ><a href="/blog">First</a></li>
 
               {% for page in (1..paginator.total_pages) %}
                 {% if page == paginator.page %}
@@ -47,7 +47,7 @@ layout: default
                 {% endif %}
               {% endfor %}
 
-              <li class="pagination-link"><a href="/hardware/page/{{ paginator.total_pages }}/#/">Last</a></li>
+              <li class="pagination-link"><a href="/blog/page/{{ paginator.total_pages }}/#/">Last</a></li>
 
               {% if paginator.next_page %}
                 <li class="pagination-link"><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">&raquo;</a></li>
@@ -62,4 +62,3 @@ layout: default
     {%- include blog_sidebar.html -%}
 
  </div>
-
