--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,8 @@ layout: default
     });
   });
 </script>
-    <div class="jumbotron" style="text-align: center;">
-      <img class="author-profile-img" src="/assets/img/profile.png" />
+    <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/imac.jpg); background-size: cover;">
+      <img class="author-profile-img" src="/assets/img/yrhs_dev.png" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
